added styling to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -109,6 +109,325 @@
         <div class="c-db-wall">
           <div class="c-wall js-wall"></div>
         </div>
+        <div>
+          <ul class="o-list c-dashboard__grips">
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Bak</h1>
+              <label for="grip1" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="152.528" height="177.1" viewBox="0 0 152.528 177.1">
+                  <defs>
+                    <style>
+                      .bak-a {
+                        fill: #2e95d2;
+                      }
+                      .bak-b {
+                        fill: #40a3db;
+                      }
+                      .bak-c {
+                        fill: #e6e7e8;
+                      }
+                      .bak-d {
+                        fill: #414042;
+                      }
+                      .bak-e {
+                        fill: #1b86c8;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-265.259 -332.374)">
+                    <path class="bak-a" d="M407.5,369.1s-6.8-7.4-22.8-6.7-33.1-9-41.5-21.5c-12.5-18.5-73.1-6.7-61.7,33.5s-12.7,57-16.1,92.5,59.7,59,74.4,28.2,26.9-67.7,52.6-79.8C418.2,403.3,426.3,390.6,407.5,369.1Z" />
+                    <path class="bak-b" d="M325.6,395.6c-27.9,0-38.6-1.2-43.6-19.2,10.1,38.9-13.3,55.7-16.6,90.6a28.607,28.607,0,0,0,.4,8.3c3.7-2.9,9.4-6,18.4-8.7,24.6-7.4,42.4-9.4,57.3-26.8S354.4,395.6,325.6,395.6Z" />
+                    <circle class="bak-c" cx="11.7" cy="11.7" r="11.7" transform="translate(318.9 406)" />
+                    <circle class="bak-d" cx="7.8" cy="7.8" r="7.8" transform="translate(322.8 409.9)" />
+                    <path class="bak-b" d="M345.9,376.4c-.2,11.8,23.5,24.1,43.5-13.9-1.5-.1-3-.1-4.7-.1-16,.7-33.1-9-41.5-21.5C343.1,341,346.1,364.6,345.9,376.4Z" />
+                    <path class="bak-e" d="M392.4,415.4c23.9-11.2,32.5-22.9,18.8-41.6,1.2,8.2,1.1,17.6-3.9,23.1-10.1,11.4-30.2,6.8-45.6,32.6s-24.8,57.9-42.9,65c-10,3.9-26.4,3.5-39.2,2.3,18.7,15.3,50.2,19,60.1-1.6C354.5,464.3,366.6,427.4,392.4,415.4Z" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip1" class="c-grip-add__button js-add__grip" data-id="bak" />
+            </li>
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Bidoigt</h1>
+              <label for="grip2" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="126.038" height="102.029" viewBox="0 0 126.038 102.029">
+                  <defs>
+                    <style>
+                      .bidoigt-a {
+                        fill: #f26522;
+                      }
+                      .bidoigt-b {
+                        fill: #f7941e;
+                      }
+                      .bidoigt-c {
+                        fill: #e6e7e8;
+                      }
+                      .bidoigt-d {
+                        fill: #414042;
+                      }
+                      .bidoigt-e {
+                        fill: #de5426;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-476.416 -105.437)">
+                    <path class="bidoigt-a" d="M549.2,107.4c-10.7,5.3-33.1,15.5-56.8,20.5a18.752,18.752,0,0,0-14.8,15.2,71.985,71.985,0,0,0-.6,22,18.7,18.7,0,0,0,17.6,16.1c13.7.8,36.5,4.8,55.2,21.6a18.679,18.679,0,0,0,20.9,2.6A81.673,81.673,0,0,0,598.4,183a18.775,18.775,0,0,0,.8-22.2,57.622,57.622,0,0,1-10.3-28.7,18.528,18.528,0,0,0-5.4-11.8,69.3,69.3,0,0,0-17.6-13A19.183,19.183,0,0,0,549.2,107.4Z" />
+                    <path class="bidoigt-b" d="M570.3,181.5c27.7-10.8,1.9-42.2,13.1-61a69.3,69.3,0,0,0-17.6-13,18.639,18.639,0,0,0-16.6,0c-10.7,5.3-33.1,15.5-56.8,20.5a19.775,19.775,0,0,0-5,1.8h0s22.8-4.7,37.6,20.5C539.6,175.4,542.6,192.2,570.3,181.5Z" />
+                    <circle class="bidoigt-c" cx="11.7" cy="11.7" r="11.7" transform="translate(550.8 146.3)" />
+                    <circle class="bidoigt-d" cx="7.8" cy="7.8" r="7.8" transform="translate(554.7 150.2)" />
+                    <path class="bidoigt-e" d="M598.4,183.1a19.133,19.133,0,0,0,4-10.8c-8,7.9-22,20.7-32.1,25.2-14.9,6.7-26.6-12.1-56.1-20.8-14.2-4.2-24.9-3.2-32.1-1.1a18.4,18.4,0,0,0,12.5,5.6c13.7.8,36.5,4.8,55.2,21.6a18.679,18.679,0,0,0,20.9,2.6A80.044,80.044,0,0,0,598.4,183.1Z" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip2" class="c-grip-add__button js-add__grip" data-id="bidoigt" />
+            </li>
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Crimp</h1>
+              <label for="grip3" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="129.516" height="141.285" viewBox="0 0 129.516 141.285">
+                  <defs>
+                    <style>
+                      .crimp-a {
+                        fill: #f15d4f;
+                      }
+                      .crimp-b {
+                        fill: #f47e69;
+                      }
+                      .crimp-c {
+                        fill: #e6e7e8;
+                      }
+                      .crimp-d {
+                        fill: #414042;
+                      }
+                      .crimp-e {
+                        fill: #db5447;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-271.352 -85.803)">
+                    <path class="crimp-a" d="M390.1,155s-23.5-12.2-34.9-34.3S325,81.9,302.9,86.6s-33.5,44.5-19.4,44.5,12.1,12.2,12.1,12.2-28.1,24.5-23.8,47.1c4.3,22.7,32.4,42.9,58.9,34.9C357.2,217.5,427.6,178.3,390.1,155Z" />
+                    <path class="crimp-b" d="M343.9,193.8c41.2-16.8-4.3-43.6-19.5-53.6-15.2-10.1-36.8-8.6-36.8-8.6h0c9.6,2.1,8,11.8,8,11.8a97.788,97.788,0,0,0-16.3,19.2h0C291.2,162.3,302.7,210.5,343.9,193.8Z" />
+                    <circle class="crimp-c" cx="11.7" cy="11.7" r="11.7" transform="translate(324.4 160.6)" />
+                    <circle class="crimp-d" cx="7.8" cy="7.8" r="7.8" transform="translate(328.3 164.5)" />
+                    <path class="crimp-e" d="M390.1,155a95.2,95.2,0,0,1-21.5-16.4s9.2,14.2,16.6,21.9,12.4,17.5-24.4,41.9c-36.9,24.4-76.5,16.1-88-8.4,6.4,21.1,32.9,38.9,58,31.3C357.2,217.5,427.6,178.3,390.1,155Z" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip3" class="c-grip-add__button js-add__grip" data-id="crimp" />
+            </li>
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Jug</h1>
+              <label for="grip4" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="153.69" height="145.178" viewBox="0 0 153.69 145.178">
+                  <defs>
+                    <style>
+                      .jug-a {
+                        fill: #42bfb9;
+                      }
+                      .jug-b {
+                        fill: #5ec5be;
+                      }
+                      .jug-c {
+                        fill: #e6e7e8;
+                      }
+                      .jug-d {
+                        fill: #414042;
+                      }
+                      .jug-e {
+                        fill: #02aba0;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-51.828 -352.58)">
+                    <path class="jug-a" d="M201.1,377.4s-7.7-22.1-28.6-24.5-57.1,9.7-82.9,3.8c-25.9-5.9-41.2,9-37,61.2s5.8,73.4,37.7,78.9S175,480.3,193,453.4,205.6,386,201.1,377.4Z" />
+                    <path class="jug-b" d="M111.9,449.4c44.6,3.5,47.1-43.9,52-62,2.3-8.6-2.6-22.3-8.4-34.2-20.4,2-46.2,8-66,3.5a53.4,53.4,0,0,0-5.3-.9c2.8,7.1,4.2,17.1,1.7,30.9C79.1,423.5,67.3,446,111.9,449.4Z" />
+                    <circle class="jug-c" cx="11.7" cy="11.7" r="11.7" transform="translate(98 402.1)" />
+                    <circle class="jug-d" cx="7.8" cy="7.8" r="7.8" transform="translate(101.9 406)" />
+                    <path class="jug-e" d="M52.5,418c4.1,52.1,5.8,73.4,37.7,78.9,21.8,3.8,53.4-5.4,76.9-20.1,0,0-62.3,15.2-86.5-2.7-20.8-15.3-26.5-82.9-16.3-113.4C54.6,368.7,50,386.6,52.5,418Z" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip4" class="c-grip-add__button js-add__grip" data-id="jug" />
+            </li>
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Mono</h1>
+              <label for="grip5" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="113.957" height="176.059" viewBox="0 0 113.957 176.059">
+                  <defs>
+                    <style>
+                      .mono-a {
+                        fill: #4eba6e;
+                      }
+                      .mono-b {
+                        fill: #75c485;
+                      }
+                      .mono-c {
+                        fill: #e6e7e8;
+                      }
+                      .mono-d {
+                        fill: #414042;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-485.145 -331.038)">
+                    <path class="mono-a" d="M495,499.4s-21.7-33-.7-87.4,67.6-85.6,77.8-80.4-4,38.1,14.7,56.7,13.7,14.9.8,48.1c-12.9,33.3-10.7,53.8-41.8,61.7S505.5,513,495,499.4Z" />
+                    <path class="mono-b" d="M563.9,367.1c-17.1,20-61.9,34.3-52,72.6s38,49.2,48.4,18.7c10.3-30.5,24.4-64.8,33.2-63.4-1.7-1.9-3.9-4.1-6.6-6.7-12.8-12.7-10.2-32.1-10.6-44.8C575.7,348.5,573,356.4,563.9,367.1Z" />
+                    <circle class="mono-c" cx="11.7" cy="11.7" r="11.7" transform="translate(527.1 420.2)" />
+                    <circle class="mono-d" cx="7.8" cy="7.8" r="7.8" transform="translate(531 424.1)" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip5" class="c-grip-add__button js-add__grip" data-id="mono" />
+            </li>
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Pocket</h1>
+              <label for="grip6" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="110.7" height="98.247" viewBox="0 0 110.7 98.247">
+                  <defs>
+                    <style>
+                      .pocket-a {
+                        fill: #955ba5;
+                      }
+                      .pocket-b {
+                        fill: #e6e7e8;
+                      }
+                      .pocket-c {
+                        fill: #414042;
+                      }
+                      .pocket-d {
+                        fill: #884b9d;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-674.682 -107.376)">
+                    <path class="pocket-a" d="M675.5,137.1s3.4-18.8,28.8-25.5,71.1-6.7,77.1,9.4,8.6,77.1-17.5,83.8-32.1-29.5-41.5-36.9C713.1,160.6,668.1,167.3,675.5,137.1Z" />
+                    <circle class="pocket-b" cx="11.7" cy="11.7" r="11.7" transform="translate(740.5 133.1)" />
+                    <circle class="pocket-c" cx="7.8" cy="7.8" r="7.8" transform="translate(744.4 137)" />
+                    <path class="pocket-d" d="M783.5,174.9c-10.1,17.8-25.8,21.5-31.3,6.4-7.4-20.1-18.7-27.5-48.2-28.8-14.5-.6-23.6-4.4-29.3-8.1,1.3,21.7,39.2,16.8,47.7,23.5,9.4,7.4,15.4,43.6,41.5,36.9C774.9,202,780.8,189.6,783.5,174.9Z" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip6" class="c-grip-add__button js-add__grip" data-id="pocket" />
+            </li>
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Sloper</h1>
+              <label for="grip7" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="151.646" height="96.848" viewBox="0 0 151.646 96.848">
+                  <defs>
+                    <style>
+                      .sloper-a {
+                        fill: #d95d98;
+                      }
+                      .sloper-b {
+                        fill: #f05d96;
+                      }
+                      .sloper-c {
+                        fill: #e6e7e8;
+                      }
+                      .sloper-d {
+                        fill: #414042;
+                      }
+                      .sloper-e {
+                        fill: #db3d78;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-44.676 -108.141)">
+                    <path class="sloper-a" d="M193.8,128.9s-6-3.4-9.4-12.7-18.1-10.7-26.8-3.4c-8.7,7.4-49.6,8.7-66.4,16.1S43.7,139,44.7,157.7s16.4,21.5,19,15.4c2.7-6,35,5.4,44,12.1S144.2,209.3,167,204s10.1-21.5,12.7-29.5C182.5,166.4,203.2,141.6,193.8,128.9Z" />
+                    <path class="sloper-b" d="M151.8,135.1c-17.8-9.1-48.2-3.5-70.4-2.6-16.7,5.2-37.4,9.8-36.6,25.3.9,18.8,16.4,21.5,19,15.4,0,0-5.8-9.1,11.5-16.6s22.7,14.6,50.2,21.3S178.9,148.9,151.8,135.1Z" />
+                    <circle class="sloper-c" cx="11.7" cy="11.7" r="11.7" transform="translate(128.4 144.8)" />
+                    <circle class="sloper-d" cx="7.8" cy="7.8" r="7.8" transform="translate(132.3 148.7)" />
+                    <path class="sloper-e" d="M179.8,181.2a15.085,15.085,0,0,1,0-6.7c2.7-8,23.5-32.8,14.1-45.6,0,0-6-3.4-9.4-12.7-2.1-5.8-8.5-8.5-15.2-8,18.9,3.4,8.1,27.7,3.1,36.5-13.4,23.5,7.4,36.5,7.4,36.5Z" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip7" class="c-grip-add__button js-add__grip" data-id="sloper" />
+            </li>
+            <li class="c-grip-add">
+              <h1 class="c-grip-add__title">Undercling</h1>
+              <label for="grip8" class="c-grip-add__label">
+                <svg xmlns="http://www.w3.org/2000/svg" class="c-grip-add__symbol" width="134.257" height="110.92" viewBox="0 0 134.257 110.92">
+                  <defs>
+                    <style>
+                      .undercling-a {
+                        fill: #f8be37;
+                      }
+                      .undercling-b {
+                        fill: #ffce4b;
+                      }
+                      .undercling-c {
+                        fill: #1b86c8;
+                      }
+                      .undercling-d {
+                        fill: #e6e7e8;
+                      }
+                      .undercling-e {
+                        fill: #414042;
+                      }
+                      .undercling-f {
+                        fill: #f8b32b;
+                      }
+                    </style>
+                  </defs>
+                  <g transform="translate(-662.95 -365.5)">
+                    <path class="undercling-a" d="M766,473s24.1-16.1,29.5-44.9-3.4-49.6-10.7-51.6c-7.4-2-22.1,6-27.5,3.4-5.4-2.7-8.9-14.3-27.7-14.3S699,393,692.9,395.5c-6,2.5-27.8-7.9-29.7,0-1.6,6.9,3.9,52.4,33.4,66.9a11.814,11.814,0,0,0,15.8-5.3c2.5-5,7.3-10.2,16.2-10.2C745.9,446.7,725.8,488.4,766,473Z" />
+                    <path class="undercling-b" d="M757.3,379.8c-5.4-2.7-8.9-14.3-27.7-14.3s-30.6,27.4-36.7,29.9a12.386,12.386,0,0,1-5.6.2c2.5.4,11.9,2.7,22,13.6,11.7,12.7,17.8,24.6,34.8,19.9,25-6.9-1.6-39.2,17.2-48,.7-.3,1.3-.7,1.9-1C760.8,380.4,758.7,380.5,757.3,379.8Z" />
+                    <path class="undercling-c" d="M686.7,395.5Z" />
+                    <circle class="undercling-d" cx="11.7" cy="11.7" r="11.7" transform="translate(724.7 392.5)" />
+                    <circle class="undercling-e" cx="7.8" cy="7.8" r="7.8" transform="translate(728.6 396.4)" />
+                    <path class="undercling-f" d="M790.6,381.7c.8,16.9.3,45.8-11.4,59.6-17.1,20.1-27.9,30.3-33.2,17.9-5.3-12.5-11.2-27.2-28.7-8.4a17.026,17.026,0,0,1,11.4-4c17.3,0-2.9,41.6,37.4,26.2,0,0,24.1-16.1,29.5-44.9C799.5,406.8,795.7,389.9,790.6,381.7Z" />
+                  </g>
+                </svg>
+              </label>
+              <input type="button" value="toevoegen" id="grip8" class="c-grip-add__button js-add__grip" data-id="undercling" />
+            </li>
+          </ul>
+        </div>
+
+        <div class="c-form">
+          <div>
+            <div>
+              <label class="c-label__select" for="select1"> Selecteer het touw </label>
+              <span class="c-custom-select">
+                <select class="c-input c-custom-select__input" class="" name="select1" id="select1">
+                  <option value="touw 1">Touw 1</option>
+                  <option value="touw 2">Touw 2</option>
+                </select>
+                <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M7,10l5,5,5-5Z" />
+                </svg>
+              </span>
+            </div>
+            <div>
+              <label class="c-label__select" for="select1"> Selecteer het touw </label>
+              <span class="c-custom-select">
+                <select class="c-input c-custom-select__input" class="" name="select1" id="select1">
+                  <option value="route 1">Route 1</option>
+                  <option value="route 2">Route 2</option>
+                  <option value="route 3">Route 3</option>
+                </select>
+                <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M7,10l5,5,5-5Z" />
+                </svg>
+              </span>
+            </div>
+          </div>
+
+          <div class="c-form__setting">
+            <h1 class="c-form__setting--title">Instelling</h1>
+            <div class="c-form__inputs">
+              <label for="name" class="c-form__input--label">Name</label>
+              <input required placeholder="naam van de route" type="input" id="name" class="c-form__input" />
+              <label for="niveau" class="c-form__input--label">Niveau</label>
+              <input required placeholder="route niveau" type="input" id="niveau" class="c-form__input" />
+              <label for="color" class="c-form__input--label">Kleur</label>
+              <input type="color" id="color" class="c-form__input c-form__input--color" />
+            </div>
+            <div class="c-form__input--buttons">
+              <input type="submit" value="Update" class="c-form__input--button" />
+              <input type="submit" value="Annuleren" class="c-form__input--button" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
