--- a/touwDetail.html
+++ b/touwDetail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KlimApp - Touw Detail</title>
+    <title>MeeClimb - TouwDetail</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.svg" />
@@ -41,8 +41,8 @@
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
             <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
+            <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+            <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
           </ul>
         </nav>
       </div>
@@ -92,8 +92,8 @@
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
               <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
+              <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+              <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
             </ul>
           </nav>
         </div>
