--- a/account.html
+++ b/account.html
@@ -40,8 +40,8 @@
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
             <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
+            <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+            <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
           </ul>
         </nav>
       </div>
@@ -94,8 +94,8 @@
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
               <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
+              <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+              <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
             </ul>
           </nav>
         </div>
