--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KlimApp - Home</title>
+    <title>Home - MeeClimb</title>
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -48,8 +48,8 @@
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item"><a href="index.html" class="c-nav__link is-selected">Home</a></li>
             <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-            <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
+            <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+            <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
           </ul>
         </nav>
       </div>
@@ -112,8 +112,8 @@
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link is-selected">Home</a></li>
               <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Ranglijst</a></li>
-              <li class="c-nav__item"><a href="#!" class="c-nav__link">Community</a></li>
+              <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+              <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
             </ul>
           </nav>
         </div>
