--- a/community.html
+++ b/community.html
@@ -42,19 +42,22 @@
         <nav class="c-nav">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
-            <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
+            <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
             <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
-            <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
+            <li class="c-nav__item"><a href="community.html" class="c-nav__link is-selected">Community</a></li>
           </ul>
         </nav>
       </div>
       <div class="c-header__nav">
-        <nav class="c-nav c-nav--meta">
-          <ul class="o-list c-nav__list u-mb-clear">
-            <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Login</a></li>
-            <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link c-nav__link--meta">Registreer</a></li>
-          </ul>
-        </nav>
+        <div class="c-nav__profile c-nav__profile--meta">
+          <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+              <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+              <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+            </svg>
+          </a>
+          <a href="profile.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
+        </div>
       </div>
       <div class="c-header__mobile-nav-trigger">
         <button class="o-button-reset c-nav-trigger js-toggle-nav u-mb-clear">
@@ -93,9 +96,9 @@
           <nav class="c-nav">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
-              <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
+              <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
               <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
-              <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
+              <li class="c-nav__item"><a href="community.html" class="c-nav__link is-selected">Community</a></li>
             </ul>
           </nav>
         </div>
