--- a/ranking.html
+++ b/ranking.html
@@ -42,19 +42,22 @@
         <nav class="c-nav">
           <ul class="o-list c-nav__list u-mb-clear">
             <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
-            <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
-            <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+            <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
+            <li class="c-nav__item"><a href="ranking.html" class="c-nav__link is-selected">Ranglijst</a></li>
             <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
           </ul>
         </nav>
       </div>
       <div class="c-header__nav">
-        <nav class="c-nav c-nav--meta">
-          <ul class="o-list c-nav__list u-mb-clear">
-            <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Login</a></li>
-            <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link c-nav__link--meta">Registreer</a></li>
-          </ul>
-        </nav>
+        <div class="c-nav__profile c-nav__profile--meta">
+          <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+              <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+              <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+            </svg>
+          </a>
+          <a href="account.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
+        </div>
       </div>
       <div class="c-header__mobile-nav-trigger">
         <button class="o-button-reset c-nav-trigger js-toggle-nav u-mb-clear">
@@ -93,21 +96,63 @@
           <nav class="c-nav">
             <ul class="o-list c-nav__list">
               <li class="c-nav__item"><a href="index.html" class="c-nav__link">Home</a></li>
-              <li class="c-nav__item"><a href="routes.html" class="c-nav__link is-selected">Routes</a></li>
-              <li class="c-nav__item"><a href="ranking.html" class="c-nav__link">Ranglijst</a></li>
+              <li class="c-nav__item"><a href="routes.html" class="c-nav__link">Routes</a></li>
+              <li class="c-nav__item"><a href="ranking.html" class="c-nav__link is-selected">Ranglijst</a></li>
               <li class="c-nav__item"><a href="community.html" class="c-nav__link">Community</a></li>
             </ul>
           </nav>
         </div>
         <div class="c-mobile-nav__nav">
-          <nav class="c-nav c-nav--meta">
-            <ul class="o-list c-nav__list">
-              <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Login</a></li>
-              <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Registreer</a></li>
-            </ul>
-          </nav>
+          <div class="c-nav__profile c-nav__profile--account">
+            <a href="#notifications" class="c-nav__notification has-notification">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+              </svg>
+            </a>
+            <a href="account.html" class="c-nav__profileimg c-nav__profileimg--account"></a>
+          </div>
         </div>
       </div>
     </aside>
+    <div class="c-ranking">
+      <div class="c-ranking__podium">
+        <div class="c-ranking__second c-ranking__podium--place u-pr">
+          <img src="/img/aman.jpg" alt="een foto van degene die op de derde plaats staat" class="c-ranking__podium--img" />
+          <p class="u-mb-clear u-pr c-ranking__podium--nummer">
+            2
+            <span class="c-ranking__podium-de">de</span>
+          </p>
+          <p class="u-mb-clear u-pr c-ranking__podium--name">Appelmous</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--sec"><span>22</span>sec</p>
+        </div>
+        <div class="c-ranking__first c-ranking__podium--place u-pr">
+          <svg xmlns="http://www.w3.org/2000/svg" class="c-ranking__podium--img c-ranking__podium--img--crown" width="87.75" height="66.368" viewBox="0 0 87.75 66.368">
+            <g transform="translate(-10 -129.4)">
+              <path d="M95.192,301.945h50.29l10.035-48.207L134.58,279.156,121.451,237.7l-13.559,41.456L86.7,254.337Z" transform="translate(-66.76 -106.177)" />
+              <path d="M443.4,137.8a8.407,8.407,0,1,0,2.462-5.935A8.486,8.486,0,0,0,443.4,137.8Z" transform="translate(-397.238)" />
+              <path d="M10,302.9a8.394,8.394,0,0,0,14.333,5.935,8.394,8.394,0,1,0-11.871-11.871A8.486,8.486,0,0,0,10,302.9Z" transform="translate(0 -151.718)" />
+              <path d="M860.4,296a8.407,8.407,0,1,0,2.462-5.935A8.486,8.486,0,0,0,860.4,296Z" transform="translate(-779.445 -145.377)" />
+            </g>
+          </svg>
+          <img src="/img/aman.jpg" alt="een foto van degene die op de derde plaats staat" class="c-ranking__podium--img" />
+          <p class="u-mb-clear u-pr c-ranking__podium--nummer">
+            1
+            <span class="c-ranking__podium-ste">ste</span>
+          </p>
+          <p class="u-mb-clear u-pr c-ranking__podium--name">Appelmous</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--sec"><span>22</span>sec</p>
+        </div>
+        <div class="c-ranking__third c-ranking__podium--place u-pr">
+          <img src="/img/aman.jpg" alt="een foto van degene die op de derde plaats staat" class="c-ranking__podium--img" />
+          <p class="u-mb-clear u-pr c-ranking__podium--nummer">
+            3
+            <span class="c-ranking__podium-de">de</span>
+          </p>
+          <p class="u-mb-clear u-pr c-ranking__podium--name">Appelmous</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--sec"><span>22</span>sec</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
