--- a/ranking.html
+++ b/ranking.html
@@ -153,6 +153,92 @@
           <p class="u-mb-clear u-pr c-ranking__podium--sec"><span>22</span>sec</p>
         </div>
       </div>
+      <div class="c-ranking__select">
+        <div>
+          <label class="c-label__select" for="select1"> Selecteer het touw </label>
+          <span class="c-custom-select">
+            <select class="c-input c-custom-select__input js-select" class="" name="select1" id="select1">
+              <option value="route 1">Route 1</option>
+              <option value="route 2">Route 2</option>
+              <option value="route 3">Route 3</option>
+            </select>
+            <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M7,10l5,5,5-5Z" />
+            </svg>
+          </span>
+        </div>
+        <div>
+          <label class="c-label__select" for="select1"> Selecteer het touw </label>
+          <span class="c-custom-select">
+            <select class="c-input c-custom-select__input js-select" class="" name="select1" id="select1">
+              <option value="route 1">Route 1</option>
+              <option value="route 2">Route 2</option>
+              <option value="route 3">Route 3</option>
+            </select>
+            <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M7,10l5,5,5-5Z" />
+            </svg>
+          </span>
+        </div>
+      </div>
+      <ul class="o-list">
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+        <li class="c-ranking__item">
+          <div>
+            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
+            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+          </div>
+          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
