--- a/account.html
+++ b/account.html
@@ -53,7 +53,7 @@
               <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
             </svg>
           </a>
-          <a href="profile.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
+          <a href="account.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
         </div>
       </div>
       <div class="c-header__mobile-nav-trigger">
@@ -107,7 +107,7 @@
                 <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
               </svg>
             </a>
-            <a href="profile.html" class="c-nav__profileimg c-nav__profileimg--account"></a>
+            <a href="account.html" class="c-nav__profileimg c-nav__profileimg--account"></a>
           </div>
         </div>
       </div>
