--- a/community.html
+++ b/community.html
@@ -56,7 +56,7 @@
               <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
             </svg>
           </a>
-          <a href="profile.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
+          <a href="account.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
         </div>
       </div>
       <div class="c-header__mobile-nav-trigger">
@@ -103,14 +103,61 @@
           </nav>
         </div>
         <div class="c-mobile-nav__nav">
-          <nav class="c-nav c-nav--meta">
-            <ul class="o-list c-nav__list">
-              <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Login</a></li>
-              <li class="c-nav__item"><a href="https://dev-2km83bxppmgj6jrr.us.auth0.com/authorize?audience=https://func-westeur-klimapp2.azurewebsites.net&response_type=code&client_id=2Uv4eoMenFX6cRnM19gWGeeNqSFHGAJw&redirect_uri=https://func-westeur-klimapp2.azurewebsites.net/auth/callback&scope=open_id%20offline_access%20role&state=Route" class="c-nav__link">Registreer</a></li>
-            </ul>
-          </nav>
+          <div class="c-nav__profile c-nav__profile--meta">
+            <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+                <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+              </svg>
+            </a>
+            <a href="account.html" class="c-nav__profileimg c-nav__profileimg--meta"></a>
+          </div>
         </div>
       </div>
     </aside>
+    <div class="c-home__background"></div>
+    <div class="c-home__background-gradiant"></div>
+    <div class="c-community">
+      <h1 class="c-community--title">Recente activiteiten</h1>
+      <div class="c-community__item">
+        <div class="c-community__item--topbar">
+          <div class="c-community__item--topbar--left">
+            <img src="img/aman.jpg" alt="avatar" class="c-community__item--avatar" />
+            <div>
+              <p class="c-community__item--topbar--name u-mb-clear">Jhon Seed</p>
+              <p class="c-community__item--topbar--date u-mb-clear">01/02/2022</p>
+            </div>
+          </div>
+          <input type="checkbox" name="like" id="like" class="o-hide-accessible c-heart-checkbox" />
+          <label for="like" class="c-community__heart">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-community__heart--symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-thumbs-up"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path></svg>
+            <span>12</span>
+          </label>
+        </div>
+        <div class="c-community__stats">
+          <div class="c-community__stat">
+            <span class="c-community__stat--titel">Route</span
+            ><span class="c-community__stat--value"
+              >Touw 2 <br />
+              Route 1</span
+            >
+          </div>
+          <div class="c-community__stat"><span class="c-community__stat--titel">Snelheid</span><span class="c-community__stat--value">1.3m/s</span></div>
+          <div class="c-community__stat"><span class="c-community__stat--titel">Tijd</span><span class="c-community__stat--value">1:02 min</span></div>
+        </div>
+        <hr class="c-community--bar" />
+        <p>Another great day on the wall, I had a blast pushing myself and trying new routes. The climb was challenging but the feeling of accomplishment at the top was worth it. The community is also great, met some awesome climbers and shared some tips. Can't wait to come back and improve my skills even more. #climbinglife #neverstoplearning</p>
+        <div class="c-activity__comment--add">
+          <textarea name="comment" id="comment" class="c-comment__area" rows="1" placeholder="Voeg een reactie toe"></textarea>
+          <label for="send_comment" class="c-commen__button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send">
+              <line x1="22" y1="2" x2="11" y2="13"></line>
+              <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+            </svg>
+          </label>
+          <input type="submit" name="send_comment" id="send_comment" class="o-hide-accessible" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
