--- a/routes.html
+++ b/routes.html
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="c-touw">
-        <div class="c-touw__backgouround c-touw__backgouround-2"></div>
+        <div class="c-touw__backgouround" style="position: absolute; top: 0; width: 100%; height: 100%; background: url(https://klimapp2b47b.blob.core.windows.net/meeclimbimage/sander.jpg) no-repeat center center / cover; filter: sepia(50%) saturate(350%) hue-rotate(210deg) brightness(50%) blur(1px); transform: scale(1.05); z-index: -1"></div>
         <div class="c-touw__content">
           <h1 class="c-touw__content--title">Touw 2</h1>
           <a href="touwDetail.html?touw=2" class="c-touw__content--button">Bekijk routes</a>
