--- a/routes.html
+++ b/routes.html
@@ -134,6 +134,7 @@
 
     <section class="c-Routes__touw">
       <div class="c-touw">
+        <img src="/img/aman.jpg" class="c-touw__backgouround" alt="rope achtergrond" />
         <div class="c-touw__backgouround c-touw__backgouround-1"></div>
         <div class="c-touw__content">
           <h1 class="c-touw__content--title">Touw 1</h1>
