--- a/touwDetail.html
+++ b/touwDetail.html
@@ -142,7 +142,7 @@
           </div>
           <a href="routes.html" class="c-wall__routes--goback">Ga terug</a>
         </div>
-        <!-- only show this when logged in
+        <!-- only show this when logged in -->
         <div class="c-wall__from">
           <div class="c-commend__add" title="je moet ingelogd zijn om comments achter te laten" aria-disabled="TFrue">
             <label for="cocmment">Voeg een comment toe:</label><textarea name="comment" id="comment" class="c-comment__area" rows="4" placeholder="Wat vind u van deze route?"></textarea>
@@ -162,7 +162,7 @@
           <div class="c-comments">
             <div class="c-comment">
               <div class="c-comment-top">
-                <span class="c-comment__img"></span>
+                <img src="img/aman.jpg" alt="" class="c-comment__img" />
                 <div>
                   <p class="c-comment__name u-mb-xs">Elien Beirlaen</p>
                   <p class="c-comment__date u-mb-clear">10/01/2023</p>
@@ -188,7 +188,6 @@
             </div>
           </div>
         </div>
-        -->
       </div>
     </div>
   </body>
