fixed responivness of rankglijst

--- a/dashboard.html
+++ b/dashboard.html
@@ -398,7 +398,7 @@
               </span>
             </div>
             <div>
-              <label class="c-label__select" for="select1"> Selecteer het touw </label>
+              <label class="c-label__select" for="select1"> Selecteer de route </label>
               <span class="c-custom-select">
                 <select class="c-input c-custom-select__input js-select-route" class="" name="select1" id="select1">
                   <option value="route 1">Route 1</option>
