--- a/dashboard.html
+++ b/dashboard.html
@@ -54,7 +54,7 @@
                 <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
               </svg>
             </a>
-            <a href="profile.html" class="c-nav__profileimg"></a>
+            <a href="account.html" class="c-nav__profileimg"></a>
           </div>
         </div>
       </div>
@@ -74,13 +74,13 @@
               <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" />
+          <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption3" name="navoption" disabled />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3" title="moderatie van social media berichten">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
               <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption4" name="navoption" />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption4" name="navoption" disabled />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="Statistieken van de muren">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
               <line x1="18" y1="20" x2="18" y2="10"></line>
@@ -88,13 +88,13 @@
               <line x1="6" y1="20" x2="6" y2="14"></line>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption5" name="navoption" />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="radio" id="navoption5" name="navoption" disabled />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5" title="Setting voor moderation">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings">
               <circle cx="12" cy="12" r="3"></circle>
               <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
             </svg>
-          </label>
+          </label> -->
         </div>
         <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
         <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="uitloggen">
@@ -428,17 +428,17 @@
             </div>
           </div>
           <div class="c-form__setting">
-            <h1 class="c-form__setting--title">Delete geselecteerde</h1>
-            <div class="c-form__input--buttons">
-              <input type="button" value="Touw" class="c-form__input--button js-delete-rope" />
-              <input type="button" value="Route" class="c-form__input--button js-delete-route" />
-            </div>
-          </div>
-          <div class="c-form__setting">
             <h1 class="c-form__setting--title">Toevoegen Van</h1>
             <div class="c-form__input--buttons">
               <input type="button" value="Touw" class="c-form__input--button js-add-rope" />
               <input type="button" value="Route" class="c-form__input--button js-add-route" />
+            </div>
+          </div>
+          <div class="c-form__setting">
+            <h1 class="c-form__setting--title">Delete geselecteerde</h1>
+            <div class="c-form__input--buttons">
+              <input type="button" value="Touw" class="c-form__input--button js-delete-rope" />
+              <input type="button" value="Route" class="c-form__input--button js-delete-route" />
             </div>
           </div>
         </div>
@@ -458,13 +458,13 @@
     <div class="c-overlay js-overlay--addroute">
       <div class="c-form__inputs c-overlay--rope">
         <label for="name" class="c-form__input--label">Name</label>
-        <input placeholder="naam van de route" type="input" id="name" class="c-form__input js-route-name" />
+        <input placeholder="naam van de route" type="input" id="name" class="c-form__input js-add-route-name" />
         <label for="niveau" class="c-form__input--label">Niveau</label>
-        <input placeholder="route niveau" type="input" id="niveau" class="c-form__input js-route-niveau" />
+        <input placeholder="route niveau" type="input" id="niveau" class="c-form__input js-add-route-niveau" />
         <label for="color" class="c-form__input--label">Kleur</label>
-        <input type="color" id="color" class="c-form__input c-form__input--color js-route-color" />
+        <input type="color" id="color" class="c-form__input c-form__input--color js-add-route-color" />
         <div class="c-form__input--buttons">
-          <input type="button" value="Toevoegen" class="c-form__input--button js-add-add-route" />
+          <input type="button" value="Toevoegen" class="c-form__input--button js-toevoegen-route" />
           <input type="button" value="Annuleren" class="c-form__input--button js-annuleren-route" />
         </div>
       </div>
